# zmq-algebraiceffect

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md  TESTCASES.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  handler.cpp  performer.cpp
include/zmqae/: client.hpp  perform_context.hpp  router.hpp  types.hpp  uuid.hpp  zmqae.h  zmqae.hpp
include/zmqae/detail/: context.hpp  message.hpp  thread_queue.hpp
src/: c_api.cpp
tests/: CMakeLists.txt  test_c_api.cpp  test_client.cpp  test_forwarding.cpp  test_integration.cpp  test_message.cpp  test_nested_perform.cpp  test_router.cpp  test_uuid.cpp
